[US13686] Manual  Nginx Proxy with Hugo Based Site

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rajasoun/ignitor.git"
+    "url": "git+https://github.com/rajasoun/tracker.doc.git"
   },
   "keywords": [
     "lunr"
@@ -19,9 +19,9 @@
      "url": "http://www.apache.org/licenses/LICENSE-2.0"
    }],
   "bugs": {
-    "url": "https://github.com/rajasoun/ignitor/issues"
+    "url": "https://github.com/rajasoun/tracker.doc/issues"
   },
-  "homepage": "https://github.com/rajasoun/ignitor#readme",
+  "homepage": "https://github.com/rajasoun/tracker.doc#readme",
   "devDependencies": {
     "lunr-hugo": "^0.1.2"
   }
