--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://hostlocal.io:1313/"
+baseurl = "https://tracker.learn.cisco/docs"
 languageCode = "en-us"
 title = "Tracker Docs"
 theme = "hugo-theme-learn"
