[US13686] Manual  Nginx Proxy with Hugo Based Site

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = "hugo-theme-learn"
 MetaDataFormat = "yaml"
 
 [params]
-  editURL = "https://github.com/rajasoun/tracker.doc/tree/master/content"
+  editURL = "https://github.com/rajasoun/tracker.doc/edit/master/content/"
   description = "Documentation for Tracker"
   author = "Raja. S"
   autoNav = true
